<resources>
    <string name="app_name">Ana noamany</string>
    <string name="checkNetworkConnection">check your internet connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="subscription_status">Subscription status:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="kind">Kind:</string>
    <string name="old">Age:</string>
    <string name="gender">Gender:</string>
    <string name="length">Length:</string>
    <string name="wateramount">The amount of water in the body:</string>
    <string name="protein">Protein:</string>
    <string name="minerals">Minerals:</string>
    <string name="fats">Fats</string>
    <string name="weight">Weight:</string>
    <string name="supscription_data">subscription data</string>
    <string name="locker_data">locker data</string>
    <string name="stopped_data">stopped data</string>
    <string name="body_stats">Body stats</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About Gym</string>
    <string name="logout">Logout</string>
    <string name="login_user">user login</string>
    <string name="signup">new user</string>
    <string name="skip">Skip</string>
    <string name="noamany">Ana Noamany</string>
    <string name="description">The right place for a healthy and athletic body</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="advertisment">Ads</string>
    <string name="setting">Settings</string>
    <string name="subscription_price">Subscription price:</string>
    <string name="subscripe">know more</string>
    <string name="client_name">Client Name</string>
    <string name="client_phone">Client Phone</string>
    <string name="client_email">Client email</string>
    <string name="send_message">Send Message</string>
    <string name="message_info">write message that you want</string>
    <string name="subject">Subject</string>
    <string name="thanks">thanks</string>
    <string name="evaluation">Evaluation</string>
    <string name="problem">Problem</string>
    <string name="validate_name">please enter your name</string>
    <string name="validate_phone">please enter your phone</string>
    <string name="validate_email">please enter your email</string>
    <string name="validate_content">please enter your message content</string>
    <string name="validate_subject">please enter your subject</string>
    <string name="validate_password">please add your password</string>
    <string name="validate_birthdate">please enter your birth date</string>
    <string name="phone">phone</string>
    <string name="name">Name</string>
    <string name="birthdate">Birth date</string>
    <string name="newsignup">Sign up with new account</string>
    <string name="sign_up">sign up</string>
    <string name="trainer">Done by:</string>
    <string name="reason">Reason:</string>
    <string name="stop_date">Stopped date:</string>
    <string name="validate_login">please login to application</string>
    <string name="ok">OK</string>
    <string name="myaccount">My account</string>
    <string name="supscription">Subscriptions</string>
    <string name="news">News</string>
    <string name="parcode">barcode</string>
    <string name="exercise">exercises</string>
    <string name="profile">Profile</string>
    <string name="body_stats_found">there is no in body stats</string>
    <string name="supscription_data_found">there is no subscriptions data</string>
    <string name="locker_data_found">there is no locker data</string>
    <string name="videos_found">there is no exercise videos</string>
    <string name="stopped_data_found">there is no stopped data</string>
    <string name="company_name">Company name</string>
    <string name="company_phone">Company Phone</string>
    <string name="product_name">product name</string>
    <string name="product_description">Product description</string>
    <string name="vedio_id">video id</string>
    <string name="publish">publish</string>
    <string name="ads_added">Ads is added successfully</string>
    <string name="company_address">Company address</string>
    <string name="new_ads">New ads</string>
    <string name="ads_img">ads image</string>
    <string name="validate_company_name">please add company name</string>
    <string name="validate_company_phone">please add company phone</string>
    <string name="validate_company_address">please add company address</string>
    <string name="validate_product_name">please add product name</string>
    <string name="validate_product_description">please add product description</string>
    <string name="validate_product_link">please add vedio id</string>
    <string name="validate_photo">please add product photo</string>
    <string name="national_num">National Number</string>
    <string name="validate_national_num">please add your national num</string>
    <string name="edit_profile">Edit profile</string>
    <string name="invite_friend">invite friend</string>
    <string name="available">Available</string>
    <string name="finished">Finished</string>
    <string name="member_no">member no:</string>
    <string name="age">age</string>
    <string name="validate_age">age must be 16 or above</string>
    <string name="welcome">Welcome to Noamany Fitness Center</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="msg_subscribed">subscripe</string>
    <string name="msg_subscribe_failed">failed subscripe</string>
    <string name="confirm">Confirm</string>
    <string name="choose_city">Choose City</string>
    <string name="add_inbody">Request for inbody stats to subscribe</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="inbody_count">inbody count</string>
    <string name="member_discount">Your Discounts</string>
    <string name="discount_date">Discount Date</string>
    <string name="captain">Captain</string>
    <string name="channel_name">Noamany</string>
    <string name="channel_description">Description</string>
    <string name="points">Points</string>
    <string name="available_points">available points</string>
    <string name="disavailable_points">unavailable points</string>
    <string name="value">Value</string>
    <string name="deadline_date">deadline date</string>
    <string name="request_inbody">Request an Inbody</string>
    <string name="inbody_remain">Remain Inbody</string>
    <string name="personal_data">Personal Data</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="num_of_days">Number of Days</string>
    <string name="subscripe2">subscripe</string>
    <string name="receipts_num">Receipts no:</string>
    <string name="receipts_date">Receipts Date</string>
    <string name="Receipts_value">Receipts Value</string>
    <string name="receipts">Receipts</string>
</resources>
