<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/tajawal_medium"
        android:textStyle="bold"
        android:text="@string/add_inbody"
        android:layout_marginTop="@dimen/_10sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_login_red"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/yes"
            android:textSize="@dimen/_12ssp"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_login_red2"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/red"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/no"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>

</LinearLayout>