<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="invitefriendviewmodel"
            type="com.alatheer.noamany.InviteFriendViewModel"/>
    </data>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_7sdp"
                android:src="@drawable/ic_chevron"
                android:background="@drawable/ic_rectangle_5256"
                android:padding="@dimen/_2sdp" />
            <TextView
                android:id="@+id/txt_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_friend"
                android:fontFamily="@font/tajawal_bold"
                android:textSize="@dimen/_14ssp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/tajawal_medium"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/name"
                    android:background="@drawable/et_contact_bg"
                    android:textColorHint="#aaaaaa"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:textColor="@color/lightblack"
                    android:layout_margin="@dimen/_10sdp"/>
                <EditText
                    android:id="@+id/et_national_num"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/tajawal_medium"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:hint="@string/national_num"
                   android:background="@drawable/et_contact_bg"
                    android:textColorHint="#aaaaaa"
                    android:textColor="@color/lightblack"
                    android:inputType="number"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"/>
                <EditText
                    android:id="@+id/et_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/tajawal_medium"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:hint="@string/phone"
                    android:background="@drawable/et_contact_bg"
                    android:textColorHint="#aaaaaa"
                    android:textColor="@color/lightblack"
                    android:inputType="phone"
                    android:elevation="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"/>
                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/tajawal_medium"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:hint="@string/age"
                    android:textColorHint="#aaaaaa"
                    android:textColor="@color/lightblack"
                    android:inputType="number"
                    android:background="@drawable/et_contact_bg"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
                <Button
                    android:id="@+id/btn_invite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/new_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/tajawal_black"
                    android:text="@string/invite_friend"
                    android:layout_marginTop="@dimen/_30sdp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>

