<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_10sdp"
    android:backgroundTint="@color/white"
    app:cardElevation="@dimen/_3sdp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/tajawal_bold"
            android:textSize="@dimen/_12ssp"
            android:text="اشتراك المؤسسات الشهرية"
            android:layout_alignParentRight="true" />
        <LinearLayout
            android:id="@+id/linear_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txt_name"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/txt_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/start_date"/>
            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/tajawal_medium"
                android:text="11/8/2020"
                android:layout_marginStart="@dimen/_2sdp"/>
            <TextView
                android:id="@+id/txt_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/tajawal_medium"
                android:text="@string/end_date"
                android:layout_marginStart="@dimen/_4sdp"/>
            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/tajawal_medium"
                android:text="12/8/2020"
                android:layout_marginStart="@dimen/_2sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear_date"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/txt_subscription_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/subscription_status"/>
            <TextView
                android:id="@+id/subscription_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txt_subscription_price"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorgreen"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/tajawal_bold"
                android:text="جاري"
                android:layout_marginStart="@dimen/_5sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear4"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/txt_subscription_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/subscription_price"/>
            <TextView
                android:id="@+id/subscription_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txt_subscription_price"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorgreen"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/tajawal_bold"
                android:text="جاري"
                android:layout_marginStart="@dimen/_5sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear7"
            android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/txt_inbody_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/inbody_count"/>
        <TextView
            android:id="@+id/inbody_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/txt_inbody_count"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorgreen"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/tajawal_bold"
            android:text="جاري"
            android:layout_marginStart="@dimen/_5sdp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear5"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/txt_inbody_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/tajawal_bold"
                android:text="@string/inbody_remain"/>
            <TextView
                android:id="@+id/inbody_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txt_inbody_remain"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorgreen"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/tajawal_bold"
                android:text="جاري"
                android:layout_marginStart="@dimen/_5sdp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear6"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/txt_active_bg"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white"
            android:text="إدفع الأن"
            android:fontFamily="@font/tajawal_bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/add_inbody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_pay"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14ssp"
            android:text="@string/add_inbody"
            android:fontFamily="@font/tajawal_bold"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>