<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/logo6"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/img"
            android:layout_marginTop="@dimen/_120sdp">
            <Button
                android:id="@+id/btn_register"
                android:onClick="go_to_registeration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/sign_up"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/tajawal_black"
                android:gravity="center"
                android:background="@drawable/btn_white_bg"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"/>
            <Button
                android:id="@+id/btn_login"
                android:onClick="go_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:background="@drawable/btn_white_bg"
                android:fontFamily="@font/tajawal_black"
                android:layout_margin="@dimen/_20sdp"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/btn_skip"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_37sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/red"
                android:background="@drawable/skip1"
                android:text="@string/skip"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/tajawal_black"
                android:onClick="Skip"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_90sdp"
            android:textColor="#BFFBFBFB"
            android:textSize="@dimen/_16ssp"
            android:text="حاصل علي شهادة ال ISO"
            android:fontFamily="@font/tajawal_black"
            android:layout_below="@+id/linear4"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">
        </RelativeLayout>

            </RelativeLayout>
</ScrollView>